--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,6 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "My E-Portifolio for IoT & Cybersecurity"
+  subheading: "Course Code: ITEC442"
+  subheading: "By: Chidera Chinemelum Achu"
+  subheading: "Student Number:20911326"
   banner: "your awesome url"
