--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,6 +1,4 @@
 home:
   heading: "My E-Portifolio for IoT & Cybersecurity"
-  subheading: "Course Code: ITEC442"
-  subheading: "By: Chidera Chinemelum Achu"
-  subheading: "Student Number:20911326"
+  subheading: "Course Code: ITEC442\nBy: Chidera Chinemelum Achu\nStudent Number:20911326"
   banner: "your awesome url"
