--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: IoT and Cybersercurity
+title: My Portfolio for IoT and Cybersercurity
 email: adaezechidera420@gmail.com
 author: Chidera Chinemelum Achu
 
